# csc_476_adventure_manager

./: README.md
Lab1Template/: .gitignore  CMakeLists.txt  ChangeLog  MENUREADME.txt  Makefile  README  cmake_install.cmake  controls.txt  lab7_frag.glsl  lab7_vert.glsl  libfmodex.dylib  sources.txt
Lab1Template/Shaders/: Fade_frag.glsl  Fade_vert.glsl  Fire_frag.glsl  Fire_vert.glsl  HUD_frag.glsl  HUD_vert.glsl  basicProjection_frag.glsl  basicProjection_vert.glsl  bone_vert.glsl  outsideLightTexture_frag.glsl  outsideLightTexture_vert.glsl  projection_frag.glsl  projection_vert.glsl  shadowmap_frag.glsl  shadowmap_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  tav_frag.glsl  tav_vert.glsl  trail_vert.glsl  tree_frag.glsl  tree_vert.glsl
Lab1Template/assets/caravan/: caravan.mtl
Lab1Template/assets/caravan/.mayaSwatches/: caravan_texture.tga.swatch
Lab1Template/assets/characters/: SamaraiScene.mb  Thumbs.db  badAnim.dae  bartender.blend  bartender.dae  betterAnim.dae  horse.blend  horse.dae  lumberjack.blend  lumberjack.blend1  lumberjack.dae  noAnim.dae  samurai.blend  samurai.dae  samurai.fbx
Lab1Template/assets/characters/papiromancer/: papiromancer final.fbx
Lab1Template/assets/horse/: Thumbs.db  horse.fbx
Lab1Template/assets/tavern/: roasted_turkey.mtl
Lab1Template/assets/tavern/.mayaSwatches/: dirtTex.bmp.swatch  firePitTex.bmp.swatch  samuraiTex.bmp.swatch  stonefloor.bmp.swatch  torchTex.bmp.swatch
Lab1Template/assets/tavern/barrel/: barrels.mtl
Lab1Template/assets/wall/: wall.mtl
Lab1Template/source/: Bitmap.cpp  Bitmap.h  Camera.cpp  Camera.h  FadeSystem.cpp  FadeSystem.h  FireSystem.cpp  FireSystem.h  FrustumCull.cpp  FrustumCull.h  GLSL.h  Materials.cpp  Materials.h  Particle.cpp  Particle.h  Program.cpp  Program.h  ProjectMeshes.cpp  ProjectMeshes.h  ShadowMapFBO.cpp  ShadowMapFBO.h  ShadowMapTechnique.cpp  ShadowMapTechnique.h  Shape.cpp  Shape.h  Skybox.cpp  Skybox.h  SoundPlayer.cpp  SoundPlayer.h  TavernTerrain.cpp  TavernTerrain.h  Terrain.cpp  Terrain.h  TerrainEvent.cpp  TerrainEvent.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Tree.cpp  (+38 more)
Lab1Template/source/oldCode/: cameraCode.txt
Lab1Template/website/: index.html  stylesheet.css
(+23 files in other folders)
